chore: general improvements
