# docs/openapi.json
@@ -1173,7 +1173,7 @@
                 ],
                 "summary": "Sync account balances from open finance",
                 "tags": [
-                    "Institution"
+                    "Balance"
                 ]
             }
         },
@@ -1238,6 +1238,19 @@
         "/v1/admin/transactions/sync": {
             "post": {
                 "description": "Webhook to sync transactions from open finance",
+                "parameters": [
+                    {
+                        "description": "User IDs",
+                        "in": "query",
+                        "name": "user_ids",
+                        "schema": {
+                            "items": {
+                                "type": "string"
+                            },
+                            "type": "array"
+                        }
+                    }
+                ],
                 "responses": {
                     "204": {
                         "description": "No Content"
